--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 	</aside>
 </main>
 <footer>
-	<p>&copy; 2018, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+	<p>&copy; 2022, July 2nd, Shaeden Martin</p>
 </footer>
 </body>
 </html>
